fix "[Issue 1381] New - Remove white space on reports parameters page"
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@11963 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/mifos/BirtWebViewer/webcontent/birt/styles/mifos-rewrite.css
+++ b/mifos/BirtWebViewer/webcontent/birt/styles/mifos-rewrite.css
@@ -2,7 +2,6 @@
 {
     margin:0px;
     position:relative; 
-    top:-90px;
 }
 
 .dialogBackground  {
@@ -77,6 +76,7 @@
     width:500px;
     height:280px;
     padding-right: 200px;
+    margin-top: -90px;
 }
 
 .paddingleftCreates {
